--- a/src/components/StepsHeader/StepsHeader.module.scss
+++ b/src/components/StepsHeader/StepsHeader.module.scss
@@ -1,5 +1,56 @@
 .steps_header {
-  width: 100px;
-  height: 100px;
-  background-color: orange;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.line {
+  position: relative;
+  top: 25px;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
+
+.step {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  color: white;
+  font-size: 15px;
+
+  picture {
+    position: relative;
+    width: 65px;
+    height: 40px;
+  }
+
+  p {
+    display: none;
+  }
+}
+
+@media (width>300px) {
+  .step {
+    min-width: 80px;
+    p {
+      display: unset;
+    }
+  }
+}
+
+@media (width>900px) {
+  .line {
+    top: 30px;
+  }
+  .step {
+    min-width: 100px;
+    font-size: 19px;
+
+    picture {
+      width: 65px;
+      height: 50px;
+    }
+  }
 }
