--- a/src/components/StepsSlider/StepsSlider.module.scss
+++ b/src/components/StepsSlider/StepsSlider.module.scss
@@ -1,5 +1,13 @@
 .steps_slider {
-  width: 100px;
-  height: 100px;
-  background-color: orange;
+  width: 100%;
+  height: 600px;
+  position: relative;
+  display: flex;
+  overflow-x: visible;
+}
+
+.slide {
+  min-width: 100%;
+  height: 100%;
+  border: 1px solid white;
 }
