--- a/src/components/StepsHeader/StepsHeader.module.scss
+++ b/src/components/StepsHeader/StepsHeader.module.scss
@@ -2,6 +2,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  max-width: 350px;
+  gap: 2px;
+  margin-bottom: 10px;
 }
 
 .line {
@@ -16,9 +19,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 7.5px;
   color: white;
-  font-size: 15px;
+  font-size: 14px;
 
   picture {
     position: relative;
@@ -33,7 +36,8 @@
 
 @media (width>300px) {
   .step {
-    min-width: 80px;
+    min-width: 74px;
+
     p {
       display: unset;
     }
@@ -41,12 +45,20 @@
 }
 
 @media (width>900px) {
+
+  .steps_header {
+    max-width: 450px;
+    margin-bottom: 25px;
+    gap: 10px;
+  }
+
   .line {
     top: 30px;
   }
   .step {
-    min-width: 100px;
-    font-size: 19px;
+    min-width: 80px;
+    font-size: 16px;
+    gap: 8px;
 
     picture {
       width: 65px;
