--- a/src/components/StepsSlider/StepsSlider.module.scss
+++ b/src/components/StepsSlider/StepsSlider.module.scss
@@ -4,10 +4,12 @@
   position: relative;
   display: flex;
   overflow-x: visible;
+  background-color: rgba(255, 255, 255, 0.144);
+  border-radius: 10px;
 }
 
 .slide {
   min-width: 100%;
   height: 100%;
-  border: 1px solid white;
+/*   border: 1px solid white; */
 }
