--- a/src/layouts/SearchSection/SearchSection.module.scss
+++ b/src/layouts/SearchSection/SearchSection.module.scss
@@ -1,8 +1,8 @@
 .search_section {
   width: 100%;
-  padding: 5% 5%;
+  padding: 50px 5%;
   background-color: var(--color-primary);
-  border-radius: 35px;
+  border-radius: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,12 +13,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 20px;
   }
 }
 
 @media (width > 900px) {
   .search_section {
+    padding: 70px 5%;
+    border-radius: 35px;
+
     &__max_width {
       max-width: 600px;
     }
