--- a/src/components/StepsSlider/StepsSlider.module.scss
+++ b/src/components/StepsSlider/StepsSlider.module.scss
@@ -1,15 +1,79 @@
 .steps_slider {
   width: 100%;
   height: 600px;
-  position: relative;
   display: flex;
-  overflow-x: visible;
-  background-color: rgba(255, 255, 255, 0.144);
-  border-radius: 10px;
+  gap: 20px;
 }
 
 .slide {
   min-width: 100%;
-  height: 100%;
-/*   border: 1px solid white; */
+  height: 600px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 7.5px;
+  color: white;
+}
+
+.option_button {
+  width: 100%;
+  min-height: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  border-radius: 5px;
+  border: none;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 8px 12px;
+  color: white;
+  line-height: 30px;
+  background-color: transparent;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  &:active {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+
+  h2 {
+    text-align: start;
+    font-size: 20px;
+/*     text-overflow: ellipsis;
+    white-space: nowrap; */
+
+    span {
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+}
+
+@media (width > 450px) {
+  .option_button {
+    min-height: 45px;
+    h2 {
+      font-size: 25px;
+      span {
+        font-size: 20px;
+      }
+    }
+  }
+}
+
+@media (width > 900px) {
+  .option_button {
+    min-height: 50px;
+    h2 {
+      font-size: 25px;
+
+      span {
+        font-size: 20px;
+      }
+    }
+  }
 }
