--- a/src/components/StepsHeader/StepsHeader.module.scss
+++ b/src/components/StepsHeader/StepsHeader.module.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: 2px;
   background-color: white;
+  transition: opacity 0.5s ease;
 }
 
 .step {
@@ -22,6 +23,7 @@
   gap: 7.5px;
   color: white;
   font-size: 14px;
+  transition: opacity 0.5s ease;
 
   picture {
     position: relative;
