--- a/src/components/StepsSlider/StepsSlider.module.scss
+++ b/src/components/StepsSlider/StepsSlider.module.scss
@@ -1,36 +1,59 @@
-.steps_slider {
+.steps_slider_container {
   width: 100%;
-  height: 600px;
+  overflow: visible;
   display: flex;
-  gap: 20px;
+  align-items: flex-start;
+
+  &__slider {
+    min-width: calc(100% * 3);
+    height: 600px;
+    display: flex;
+    transition: all 0.5s ease;
+  }
 }
 
 .slide {
-  min-width: 100%;
+  min-width: calc(100% / 3);
   height: 600px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  gap: 7.5px;
-  color: white;
+  transition: opacity 0.5s ease;
+
+  .group_name {
+    height: 47px;
+    display: flex;
+    align-items: center;
+
+    p {
+      color: white;
+      font-size: 20px;
+      font-weight: 600;
+      text-decoration: underline;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
 }
 
 .option_button {
+  min-height: 47px;
   width: 100%;
-  min-height: 38px;
+  padding: 0 0px;
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  border-radius: 5px;
-  border: none;
-  overflow: hidden;
-  white-space: nowrap;
-  padding: 8px 12px;
-  color: white;
-  line-height: 30px;
-  background-color: transparent;
-  cursor: pointer;
+
+  &:focus {
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
@@ -40,36 +63,48 @@
     background-color: rgba(255, 255, 255, 0.2);
   }
 
-  h2 {
-    text-align: start;
-    font-size: 20px;
-/*     text-overflow: ellipsis;
-    white-space: nowrap; */
+  div {
+    width: calc(100% - 30px);
+    display: flex;
+    align-items: flex-end;
+
+    p {
+      color: white;
+      text-align: start;
+      font-size: 20px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
 
     span {
-      font-size: 16px;
+      padding-bottom: 1px;
+      color: white;
       font-weight: 400;
-    }
-  }
-}
-
-@media (width > 450px) {
-  .option_button {
-    min-height: 45px;
-    h2 {
-      font-size: 25px;
-      span {
-        font-size: 20px;
-      }
+      font-size: 16px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
 
 @media (width > 900px) {
-  .option_button {
-    min-height: 50px;
-    h2 {
+  .slide {
+    .group_name {
+      height: 53px;
       font-size: 25px;
+    }
+  }
+
+  .option_button {
+    min-height: 53px;
+    padding: 0 15px;
+
+    div {
+      p {
+        font-size: 25px;
+      }
 
       span {
         font-size: 20px;
