--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,5 +1,6 @@
 .button {
   padding: 4px 20px;
+  width: fit-content;
 }
 
 .primary-white {
@@ -23,7 +24,7 @@
   }
 }
 
-.primary-transparent {
+.transparent-blue {
   background-color: transparent !important;
   color: var(--color-primary) !important;
   border: 1px solid var(--color-primary) !important;
@@ -39,7 +40,7 @@
   }
 }
 
-.secondary-transparent {
+.transparent-white {
   background-color: transparent !important;
   color: white !important;
   border: 1px solid white !important;
