--- a/src/components/StepsInput/StepsInput.module.scss
+++ b/src/components/StepsInput/StepsInput.module.scss
@@ -9,7 +9,8 @@
     width: 100%;
     text-align: center;
     color: white;
-    font-size: 22px;
+    font-size: 35px;
+    margin: 30px 0;
   }
 
   ol {
@@ -17,7 +18,7 @@
       color: white !important;
       cursor: pointer;
 
-      &:hover{
+      &:hover {
         text-decoration: underline;
       }
 
@@ -26,21 +27,29 @@
       }
     }
   }
-
 }
 
 @media (width > 900px) {
   .steps_input {
+    
     label {
-      font-size: 30px;
+      font-size: 50px;
     }
 
     ol {
-      
       li {
         font-size: 16px;
       }
     }
   }
-  
 }
+/* 
+@media (width > 1200px) {
+  .steps_input {
+  
+
+    label {
+      font-size: 35px;
+    }
+  }
+} */
