--- a/src/components/StepsSlider/StepsSlider.module.scss
+++ b/src/components/StepsSlider/StepsSlider.module.scss
@@ -6,7 +6,6 @@
 
   &__slider {
     min-width: calc(100% * 3);
-    height: 600px;
     display: flex;
     transition: all 0.5s ease;
   }
@@ -14,25 +13,34 @@
 
 .slide {
   min-width: calc(100% / 3);
-  height: 600px;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
-  transition: opacity 0.5s ease;
+  align-items: center;
+  gap: 50px;
+  transition: all 0.5s ease;
 
-  .group_name {
-    height: 47px;
+  &__list {
+    width: 100%;
+    overflow: hidden;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    transition: all 0.5s ease;
+    /* background-color: orange; */
 
-    p {
-      color: white;
-      font-size: 20px;
-      font-weight: 600;
-      text-decoration: underline;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+    &__group_name {
+      min-height: 47px;
+      display: flex;
+      align-items: center;
+
+      p {
+        color: white;
+        font-size: 20px;
+        font-weight: 600;
+        text-decoration: underline;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
   }
 }
@@ -89,11 +97,27 @@
   }
 }
 
+.oops_message {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+
+  p {
+    color: white;
+    font-size: 20px;
+  }
+}
+
 @media (width > 900px) {
   .slide {
-    .group_name {
-      height: 53px;
-      font-size: 25px;
+    &__list {
+      &__group_name {
+        min-height: 53px;
+        font-size: 25px;
+      }
     }
   }
 
@@ -108,6 +132,38 @@
 
       span {
         font-size: 20px;
+      }
+    }
+  }
+
+  .oops_message {
+    p {
+      font-size: 25px;
+    }
+  }
+}
+
+@media (width > 1200px) {
+  .slide {
+    &__list {
+      &__group_name {
+        min-height: 60px;
+        font-size: 30px;
+      }
+    }
+  }
+
+  .option_button {
+    min-height: 60px;
+    padding: 0 15px;
+
+    div {
+      p {
+        font-size: 30px;
+      }
+
+      span {
+        font-size: 25px;
       }
     }
   }
