--- a/src/layouts/SearchSection/SearchSection.module.scss
+++ b/src/layouts/SearchSection/SearchSection.module.scss
@@ -13,17 +13,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 10px;
   }
 }
 
 @media (width > 900px) {
   .search_section {
-    padding: 70px 5%;
+    padding: 90px 5%;
     border-radius: 35px;
 
     &__max_width {
       max-width: 600px;
+    }
+  }
+}
+
+@media (width > 1200px) {
+  .search_section {
+    &__max_width {
+      max-width: 700px;
     }
   }
 }
