--- a/src/layouts/Hero/Hero.module.scss
+++ b/src/layouts/Hero/Hero.module.scss
@@ -37,6 +37,8 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
+    scale: 1.1;
+    padding: 0 10px;
   }
 
   &__background {
