--- a/src/layouts/HowItWorksSection/HowItWorksSection.module.scss
+++ b/src/layouts/HowItWorksSection/HowItWorksSection.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   padding: 80px 5% 110px 5%;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.08);
   gap: 40px;
 
   h2 {
@@ -16,14 +16,17 @@
 
   ul {
     width: 100%;
-    max-width: 1000px;
+    max-width: 1200px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
     list-style: none;
 
     li {
+      width: 100%;
       display: flex;
+      justify-content: center;
       gap: 20px;
 
       picture {
@@ -43,8 +46,10 @@
   }
 
   &__asterisk {
-    font-size: 20px;
+    font-size: 15px;
+    padding: 0 10px;
     color: var(--color-primary);
+    max-width: 500px;
   }
 }
 
@@ -76,6 +81,7 @@
       background-color: rgba(0, 0, 0, 0.1);
       border-radius: 15px;
       padding: 50px;
+      max-width: unset;
     }
   }
 }
