--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,6 +15,7 @@
     max-width: 1200px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     header {
       display: flex;
@@ -36,11 +37,15 @@
   }
 }
 
-@media (width > 1200px) {
+@media (width > 1100px) {
   .header {
     &__max_width {
       main, aside {
         display: flex
+      }
+
+      picture {
+        display: none
       }
     }
   }
