--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 80px;
+  height: 90px;
   position: fixed;
   display: flex;
   justify-content: center;
@@ -9,6 +9,7 @@
   background-color: white;
   z-index: 10;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  transition: translate 0.3s ease;
 
   &__max_width {
     width: 100%;
