--- a/src/layouts/Hero/Hero.module.scss
+++ b/src/layouts/Hero/Hero.module.scss
@@ -46,7 +46,7 @@
     position: fixed;
     top: 50px;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     background: radial-gradient(circle at center, #dbdcde 1px, transparent 1px);
     background-size: 16px 16px;
     mask-image: radial-gradient(ellipse at 50% 50%, #000 50%, transparent 80%);
