--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -4,10 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
   margin: 20px 0 10px 0;
 
   form {
+    margin-top: -15px;
     display: flex !important;
     flex-direction: column !important;
     gap: 15px;
