--- a/.fttemplates/NewComponent/[FTName].module.scss
+++ b/.fttemplates/NewComponent/[FTName].module.scss
@@ -2,4 +2,7 @@
   width: 100px;
   height: 100px;
   background-color: orange;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
